Updated the code for creating a post to allow users to post with no image, or with no text.

--- a/public/css/userProfilePage.css
+++ b/public/css/userProfilePage.css
@@ -139,7 +139,6 @@
     color: black;
     border: 1px solid #2C3333;
     border-radius: 6px;
-
   }
 
   #userPassword{
@@ -149,7 +148,6 @@
     color: black;
     border: 1px solid #2C3333;
     border-radius: 6px;
-
   }
 
   #saveButton{
@@ -185,16 +183,19 @@
   #container4{
     grid-row: 2 / span 1;
     grid-column: 2 / span 1;
-    padding-left: 20px;
     margin-bottom: 5%;
+    max-width: 100%;
   }
 
   #timeline{
     margin-bottom: 5%;
+    max-width: 97%;
   }
 
   textarea{
-    max-width:90%;
+    max-width:97%;
+    min-width: 94%;
+    border-radius: 6px;
   }
 
   #logoutButton{
@@ -379,12 +380,14 @@
   #container4{
     grid-row: 2 / span 1;
     grid-column: 2 / span 1;
-    padding-left: 20px;
-    margin-top: 20%;
+    max-width: 600px;
+    min-width: 450px;
+    border-radius: 6px;
   }
 
   #timeline{
     margin-bottom: 5%;
+    max-width: 97%;
   }
 
   #submitPost{
@@ -404,7 +407,9 @@
   }
 
   textarea{
-    max-width:90%;
+    max-width:96%;
+    min-width: 94%;
+    border-radius: 6px;
   }
 
   #logoutButton{
