--- a/public/css/login.css
+++ b/public/css/login.css
@@ -50,12 +50,12 @@
   }
 
   #container3L {
-    grid-row: 2 / span 1;
-    grid-column: 1 / span 1;
+    grid-column: 1;
+    grid-row: 2;
     display: grid;
     grid-template-columns: 50% 50%;
-    grid-template-rows: 33.33% 33.33% 9% 20.33% 4%;
-    height: 35vh;
+    grid-template-rows: 30.33% 30.33% 8% 18.33% 10%;
+    height: 40vh;
     background-color: rgba(0, 0, 0, 0.783);
     border-radius: 6px;;
   }
@@ -112,8 +112,21 @@
     color: #CDBE78;
     text-indent: .8cm;
     text-decoration-line: none;
-    padding-top: 10%;
+    padding-top: 11%;
     padding-left: 2%;
+  }
+
+  #forgot{
+    grid-column: 1;
+    grid-row: 5;
+    text-decoration-line: none;
+    margin-left: 12%;
+    color: rgb(43, 0, 255);
+    margin-top: 8%;
+  }
+
+  #msg{
+    color: #F2F2F2;
   }
 
 }
@@ -157,7 +170,7 @@
     grid-row: 2 / span 1;
     grid-column: 1 / span 1;
     display: grid;
-    grid-template-rows: 25% 10% 25% 10% 15%;
+    grid-template-rows: 25% 10% 25% 10% 15% 5%;
     grid-template-columns: 50% 50%;
     height: 50vh;
     background-color: rgba(0, 0, 0, 0.783);
@@ -220,8 +233,21 @@
     color: #CDBE78;
     text-indent: 1cm;
     text-decoration-line: none;
-    padding-top: 7.8%;
+    padding-top: 11%;
     padding-left: 2%;
+  }
+
+  #forgot{
+    grid-column: 1;
+    grid-row: 6;
+    text-decoration-line: none;
+    margin-top: 8%;
+    margin-left: 12%;
+    color: rgb(43, 0, 255);
+  }
+
+  #msg{
+    color: #d50000;
   }
 
   .btn{
