--- a/public/css/userProfilePage.css
+++ b/public/css/userProfilePage.css
@@ -116,8 +116,8 @@
   #userFirstName{
     grid-row: 2 / span 1;
     grid-column: 1 / span 2;
-    background-color: #F2F2F2;
-    color: black;
+    background-color: rgb(81, 81, 81);
+    color: rgb(48, 48, 48);
     border: 1px solid #2C3333;
     border-radius: 6px;
   }
@@ -125,8 +125,8 @@
   #userLastName{
     grid-row: 3 / span 1;
     grid-column: 1 / span 2;
-    background-color: #F2F2F2;
-    color: black;
+    background-color: rgb(109, 109, 109);
+    color: rgb(48, 48, 48);
     border: 1px solid #2C3333;
     border-radius: 6px;
 
@@ -135,8 +135,8 @@
   #userEmail{
     grid-row: 4 / span 1;
     grid-column: 1 / span 2;
-    background-color: #F2F2F2;
-    color: black;
+    background-color: rgb(109, 109, 109);
+    color: rgb(48, 48, 48);
     border: 1px solid #2C3333;
     border-radius: 6px;
   }
@@ -144,8 +144,8 @@
   #userPassword{
     grid-column: 1 / span 2;
     grid-row: 5 / span 1;
-    background-color: #F2F2F2;
-    color: black;
+    background-color: rgb(109, 109, 109);
+    color: rgb(48, 48, 48);
     border: 1px solid #2C3333;
     border-radius: 6px;
   }
@@ -314,8 +314,8 @@
    #userFirstName{
     grid-row: 2 / span 1;
     grid-column: 1 / span 1;
-    background-color: #F2F2F2;
-    color: black;
+    background-color: rgb(81, 81, 81);
+    color: rgb(48, 48, 48);
     border: 1px solid #2C3333;
     border-radius: 6px;
   }
@@ -323,8 +323,8 @@
   #userLastName{
     grid-row: 2 / span 1;
     grid-column: 2 / span 1;
-    background-color: #F2F2F2;
-    color: black;
+    background-color: rgb(81, 81, 81);
+    color: rgb(48, 48, 48);
     border: 1px solid #2C3333;
     border-radius: 6px;
   }
@@ -332,8 +332,8 @@
   #userEmail{
     grid-row: 3 / span 1;
     grid-column: 1 / span 1;
-    background-color: #F2F2F2;
-    color: black;
+    background-color: rgb(81, 81, 81);
+    color: rgb(48, 48, 48);
     border: 1px solid #2C3333;
     border-radius: 6px;
   }
@@ -341,8 +341,8 @@
   #userPassword{
     grid-column: 2 / span 1;
     grid-row: 3 / span 1;
-    background-color: #F2F2F2;
-    color: black;
+    background-color: rgb(81, 81, 81);
+    color: rgb(48, 48, 48);
     border: 1px solid #2C3333;
     border-radius: 6px;
 
@@ -421,4 +421,12 @@
     border: #066163;
   }
   
+}
+
+#saveButton {
+  display: none;
+}
+
+#chooseImage {
+  display: none;
 }
