--- a/public/css/editPost.css
+++ b/public/css/editPost.css
@@ -4,82 +4,14 @@
   font-family: 'Montserrat', sans-serif;
 }
 
-#postEdit {
-  display: none;
-  position: fixed;
-  /* padding: 15px; */
-  z-index: 9;
-  text-align: center;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: rgba(0, 0, 0, 0.752);
-  min-width: 100%;
-  min-height: 100%;
-}
-
-#deletePost {
-  position: fixed;
-  left: 45%;
-  top: 60%;
-  background-color: rgb(136, 16, 0);
-  color: #CDBE78;
-  font-size: large;
-}
-
-#exitPost {
-  position: fixed;
-  right: 40%;
-  top: 40%;
-  background-color: #066163;
-  color: #CDBE78;
-  border-radius: 50%;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-  padding-left: 0.9rem;
-  padding-right: 0.9rem;
-  font-size: larger;
-}
-
-#editPost {
-  position: fixed;
-  left: 50%;
-  top: 60%;
-  background-color: #066163;
-  color: #CDBE78;
-  font-size: large;
-}
-
-#newImg {
-  position: fixed;
-  left: 45%;
-  top: 55%;
-}
-
-#postEditHeader {
-  position: fixed;
-  left: 30%;
-  top: 50%;
-}
-
-#newText {
-  position: fixed;
-  left: 43%;
-  top: 50%;
-}
-
-#newTextInput {
-  background-color: #F2F2F2;
-  border-radius: 6px;
-  font-size: 20px;
-  color: black;
-}
-
 @media (min-width: 0px) and (max-width: 650px) {
+
   #postEdit {
+    display: grid;
+    grid-template-rows: 30% 6% 20% 10% 30%;
+    grid-template-columns: 5% 45% 45% 5%;
     display: none;
     position: fixed;
-    /* padding: 15px; */
     z-index: 9;
     text-align: center;
     top: 50%;
@@ -87,62 +19,257 @@
     transform: translate(-50%, -50%);
     background-color: rgba(0, 0, 0, 0.752);
     min-width: 100%;
-    min-height: 100%;
+    min-height: 100%; 
   }
-
-  #deletePost {
-    position: fixed;
-    left: 23%;
-    top: 58%;
-    background-color: #066163;
-    color: #CDBE78;
-    font-size: large;
+  
+  #postEditHeader{
+    grid-row: 2;
+    grid-column: 2 / span 2;
+    background-color: #2C3333;
+    border-top: solid 2px #CDBE78;
+    border-left: solid 2px #CDBE78;
+    border-right: solid 2px #CDBE78;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
   }
-
+  
   #exitPost {
-    position: fixed;
-    right: 15%;
-    top: 35%;
-    background-color: rgb(204, 19, 19);
+    float: right;
+    margin-right: 0.8rem;
+    margin-top: 0.8rem;
+    background-color: rgb(124, 14, 0);
+    color: #CDBE78;  
     border-radius: 50%;
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-    padding-left: 0.9rem;
-    padding-right: 0.9rem;
-    font-size: larger;
+    border: solid 2px #CDBE78;
+    padding-top: 0.15rem;
+    padding-bottom: 0.15rem;
+    padding-left: 0.45rem;
+    padding-right: 0.45rem; 
   }
-
+  
+   #deletePostForm{
+    grid-row: 4;
+    grid-column: 2 / span 2;
+    background-color: #2C3333;
+    border-bottom: solid 2px #CDBE78;
+    border-left: solid 2px #CDBE78;
+    border-right: solid 2px #CDBE78;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+  } 
+  
+  #deletePost {
+    background-color: rgb(124, 14, 0);
+    float: left;
+    border: solid 2px #CDBE78;
+    border-radius: 6px;
+    color: #CDBE78;
+    padding-top: .5rem;
+    padding-bottom: .5rem;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+    margin-left: 1rem;
+    margin-top: 2.3rem;
+  }
+  
+  #editForm{
+    grid-row: 3 / span 1;
+    grid-column: 2 / span 2;
+    background-color: #2C3333;
+    border-left: solid 2px #CDBE78;
+    border-right: solid 2px #CDBE78;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 59% 1% 40%;
+  }
+  
+  #newText {
+    grid-row: 1 / span 2;
+    grid-column: 1;
+    margin-top: 38px;
+    margin-left: 1rem;
+  }
+  
+  #newTextInput {
+    padding-top: .9rem;
+    padding-bottom: .9rem;
+    padding-left: .2rem;
+    padding-right: .2rem;
+    border-radius: 6px;
+    border-color: #F2F2F2;
+    width: 95%;
+    min-width: 10%;
+    justify-self: center;
+  }
+  
+  #newImg {
+    display: none;
+  }
+  
+  .addImg{
+    grid-row: 1 / span 2;
+    grid-column: 2; 
+    color: #CDBE78;
+    border: 1px solid #CDBE78;
+    background-color: #0b2d2e;
+    padding-top: 14px;
+    border-radius: 6px;
+    text-align: center;
+    margin-top: 2.4rem;
+    margin-bottom: 1rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    font-size: 14px;
+  }
+  
+  
   #editPost {
-    position: fixed;
-    left: 23%;
-    top: 62%;
+    grid-row: 3;
+    grid-column: 1 / span 2;
     background-color: #066163;
     color: #CDBE78;
-    font-size: large;
-  }
-
-  #newImg {
-    position: fixed;
-    left: 23%;
-    top: 55%;
-  }
-
-  #postEditHeader {
-    position: fixed;
-    left: 30%;
-    top: 50%;
-  }
-
-  #newText {
-    position: fixed;
-    left: 12%;
-    top: 50%;
-  }
-
-  #newTextInput {
-    background-color: #F2F2F2;
+    border: 2px solid #CDBE78;
     border-radius: 6px;
-    font-size: 20px;
-    color: black;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    margin-bottom: 1rem;
+    font-size: 18px;
+    
   }
+}
+
+@media (min-width: 651px){
+
+
+#postEdit {
+  display: grid;
+  grid-template-rows: 30% 6% 20% 10% 30%;
+  grid-template-columns: 25% 24% 24% 25%;
+  display: none;
+  position: fixed;
+  z-index: 9;
+  text-align: center;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(0, 0, 0, 0.752);
+  min-width: 100%;
+  min-height: 100%; 
+}
+
+#postEditHeader{
+  grid-row: 2;
+  grid-column: 2 / span 2;
+  background-color: #2C3333;
+  border-top: solid 2px #CDBE78;
+  border-left: solid 2px #CDBE78;
+  border-right: solid 2px #CDBE78;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+#exitPost {
+  float: right;
+  margin-right: 0.8rem;
+  margin-top: 0.8rem;
+  background-color: rgb(124, 14, 0);
+  color: #CDBE78;  
+  border-radius: 50%;
+  border: solid 2px #CDBE78;
+  padding-top: 0.15rem;
+  padding-bottom: 0.15rem;
+  padding-left: 0.45rem;
+  padding-right: 0.45rem; 
+}
+
+ #deletePostForm{
+  grid-row: 4;
+  grid-column: 2 / span 2;
+  background-color: #2C3333;
+  border-bottom: solid 2px #CDBE78;
+  border-left: solid 2px #CDBE78;
+  border-right: solid 2px #CDBE78;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+} 
+
+#deletePost {
+  background-color: rgb(124, 14, 0);
+  float: left;
+  border: solid 2px #CDBE78;
+  border-radius: 6px;
+  color: #CDBE78;
+  padding-top: .5rem;
+  padding-bottom: .5rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  margin-left: 1rem;
+  margin-top: 2.3rem;
+}
+
+#editForm{
+  grid-row: 3 / span 1;
+  grid-column: 2 / span 2;
+  background-color: #2C3333;
+  border-left: solid 2px #CDBE78;
+  border-right: solid 2px #CDBE78;
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 59% 1% 40%;
+}
+
+#newText {
+  grid-row: 1 / span 2;
+  grid-column: 1;
+  margin-top: 38px;
+  margin-left: 1rem;
+}
+
+#newTextInput {
+  padding-top: .9rem;
+  padding-bottom: .9rem;
+  padding-left: .2rem;
+  padding-right: .2rem;
+  border-radius: 6px;
+  border-color: #F2F2F2;
+  width: 95%;
+  min-width: 10%;
+  justify-self: center;
+}
+
+#newImg {
+  display: none;
+}
+
+.addImg{
+  grid-row: 1 / span 2;
+  grid-column: 2; 
+  color: #CDBE78;
+  border: 1px solid #CDBE78;
+  background-color: #0b2d2e;
+  padding-top: 14px;
+  border-radius: 6px;
+  text-align: center;
+  margin-top: 2.4rem;
+  margin-bottom: 1rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  font-size: 14px;
+}
+
+
+#editPost {
+  grid-row: 3;
+  grid-column: 1 / span 2;
+  background-color: #066163;
+  color: #CDBE78;
+  border: 2px solid #CDBE78;
+  border-radius: 6px;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  margin-bottom: 1rem;
+  font-size: 18px;
+  
+}
+
 }
