Squashed commit of the following:
commit 6fb00d30dd1a0d9c43b866461b502398ae2d5d52
Author: Michaela Ashlee <mmashlee@gmail.com>
Date:   Thu May 26 11:29:18 2022 -0700

    Changed directory route when clicking on logo in admindash.html

commit fa77d29cf3bc9adb64a06251d900e41176dc5c5a
Author: Michaela Ashlee <mmashlee@gmail.com>
Date:   Thu May 26 10:28:37 2022 -0700

    Fixed email validation from user input. Corrected some styling.

commit 3867056d688d862a39e71bd4fd0b0d7329d7227f
Author: Michaela Ashlee <mmashlee@gmail.com>
Date:   Wed May 25 23:23:46 2022 -0700

    Created validators for user profile inputs. Updated code in app.js for user sessions.

commit 0ce0872a2a16a23b00363ad30393f0529d6e6090
Author: Iliya Habibi <ihabibi1@my.bcit.ca>
Date:   Wed May 25 18:01:09 2022 -0700

    added some space between lines

commit 211ec6efc584846a1b92e3ea5ffb96731efa3e38
Author: Iliya Habibi <ihabibi1@my.bcit.ca>
Date:   Wed May 25 16:00:12 2022 -0700

    added about page and changed css for admin dash

commit 4422da1d3f465038368165ed5828bd5555793a6e
Author: Iliya Habibi <ihabibi1@my.bcit.ca>
Date:   Wed May 25 14:34:50 2022 -0700

    is admin btn

commit 3734f36a42d588aae9a57480f131eef59ff493dd
Author: Iliya Habibi <ihabibi1@my.bcit.ca>
Date:   Wed May 25 13:11:42 2022 -0700

    fixed some bugs

commit b41dcf12ba4194d073ca6ece0053dbaf6809d7be
Author: Iliya Habibi <ihabibi1@my.bcit.ca>
Date:   Wed May 25 11:27:11 2022 -0700

    feedback and passRecov

commit 9f40c06211faa4ea3eff608d7eb227b500027e36
Merge: 3a85862 7df5685
Author: Iliya Habibi <ihabibi1@my.bcit.ca>
Date:   Wed May 25 11:18:39 2022 -0700

    Merge branch 'IH-TEST' into dev

commit 7df56855ee16cf7662398098e40611b6c44d5446
Author: Iliya Habibi <ihabibi1@my.bcit.ca>
Date:   Wed May 25 11:18:27 2022 -0700

    AEFD

commit 3a858623d3ec3069ad94db85903c5c8b064baaf7
Author: Iliya Habibi <ihabibi1@my.bcit.ca>
Date:   Wed May 25 11:04:06 2022 -0700

    recov

commit 0732ae2d02739b23a7fba4e122a9b752e7741ce5
Autho

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -12,7 +12,7 @@
 @keyframes horizontal-shaking {
   0% { transform: translateX(0) rotate(0deg);}
   25% { transform: translateX(2px) rotate(2deg);}
-  50% { transform: translateX(-2px) rotate(0eg); }
+  50% { transform: translateX(-2px) rotate(0deg);}
   75% { transform: translateX(2px) rotate(-2deg);}
   100% { transform: translateX(0) rotate(0deg);}
 }
@@ -105,7 +105,8 @@ box-shadow: 1px 1px 3px #000;
     margin: 0px;
     padding: 0px;
     background-color: #2C3333;
-  }
+    color: #CDBE78;
+  }  
 
   #container1 {
     display: grid;
@@ -356,7 +357,8 @@ box-shadow: 1px 1px 3px #000;
     margin: 0px;
     padding: 0px;
     background-color: #2C3333;
-  }
+    color: #CDBE78;
+  }  
 
   #container1 {
     display: grid;
@@ -397,7 +399,6 @@ box-shadow: 1px 1px 3px #000;
   #solutionBox {
     grid-row: 1 / span 1;
     grid-column: 1 / span 1;
-    /* margin: 1rem; */
     font-size: 20px;
     text-align: center;
     background-color: #2C3333;
@@ -600,13 +601,6 @@ box-shadow: 1px 1px 3px #000;
     color: #CDBE78;
     font-size: 23px;
     border: #066163;
-  }
-
-  #logoutButton{
-    background-color: rgba(76, 76, 76, 0.437);
-    color:white;
-    font-size: 23px;
-    border: 1px solid black;
   }
 
 }
