--- a/public/css/adminDash.css
+++ b/public/css/adminDash.css
@@ -4,7 +4,7 @@
   font-family: 'Montserrat', sans-serif;
 }
 
-@media (min-width: 0px) and (max-width: 445px) {
+@media (min-width: 0px) and (max-width: 650px) {
 
   body {
     margin: 0px;
@@ -15,13 +15,12 @@
 
   #container1 {
     display: grid;
-    grid-template-rows: 5% 30% 65%;
     grid-template-columns: 100%;
+    grid-template-rows: 5% 30% 65%;
     height: 100vh;
   }
 
   #container2 {
-
     grid-row: 2 / span 1;
     grid-column: 1 / span 1;
   }
@@ -174,6 +173,7 @@
     grid-row: 4;
     grid-template-columns: 100%;
     grid-template-rows: 33.33% 33.33% 33.33% 33.33% 33.33%;
+    margin-bottom: 10%;
   }
 
   .email {
@@ -237,33 +237,19 @@
   }
 
   #val5 {
-    display: grid;
     grid-column: 1;
     grid-row: 5;
-    width: 90%;
-    height: 50%;
     font-size: 20px;
     border: 2px solid #383838;
     border-radius: 6px;
-    color: black;
-    justify-self: center;
-    margin-top: 2%;
-    margin-right: 2%;
   }
 
   #val6 {
-    display: grid;
     grid-column: 1;
     grid-row: 6;
-    width: 90%;
-    height: 50%;
     font-size: 20px;
     border: 2px solid #383838;
     border-radius: 6px;
-    color: black;
-    justify-self: center;
-    margin-top: 2%;
-    margin-right: 2%;
   }
 
   .add {
@@ -332,7 +318,7 @@
 
 }
 
-@media (min-width: 446px) {
+@media (min-width: 651px) {
 
   body {
     margin: 0px;
@@ -351,7 +337,7 @@
 
   #container2 {
     display: grid;
-    grid-template-columns: 20% 60% 20%;
+    grid-template-columns: 50% 50%;
     grid-template-rows: 100%;
   }
 
@@ -471,33 +457,15 @@
   }
 
   #val5 {
-    display: grid;
-    grid-column: 1;
-    grid-row: 5;
-    width: 90%;
-    height: 50%;
-    font-size: 20px;
     border: 2px solid #383838;
     border-radius: 6px;
     color: black;
-    justify-self: center;
-    margin-top: 2%;
-    margin-right: 2%;
   }
 
   #val6 {
-    display: grid;
-    grid-column: 1;
-    grid-row: 6;
-    width: 90%;
-    height: 50%;
-    font-size: 20px;
     border: 2px solid #383838;
     border-radius: 6px;
     color: black;
-    justify-self: center;
-    margin-top: 2%;
-    margin-right: 2%;
   }
 
   .add {
