--- a/public/css/userProfilePage.css
+++ b/public/css/userProfilePage.css
@@ -45,7 +45,7 @@
     grid-row: 1 / span 1;
     grid-column: 1 / span 1;
     color: #CDBE78;
-    font-size: 12px;
+    font-size: 18px;
   }
 
   img {
@@ -136,7 +136,7 @@
   #userFirstName{
     grid-row: 2 / span 1;
     grid-column: 1 / span 2;
-    background-color: rgb(81, 81, 81);
+    background-color: rgb(109, 109, 109);
     color: rgb(48, 48, 48);
     border: 1px solid #2C3333;
     border-radius: 6px;
@@ -149,7 +149,6 @@
     color: rgb(48, 48, 48);
     border: 1px solid #2C3333;
     border-radius: 6px;
-
   }
 
   #userEmail{
@@ -251,7 +250,7 @@
 
   #container2{
     display: grid;
-    grid-template-rows: 800px 1fr;
+    grid-template-rows: 1080px 1fr;
     grid-template-columns: 1fr 40% 1fr;
   }
   
@@ -270,6 +269,7 @@
     grid-row: 1 / span 1;
     grid-column: 1 / span 1;
     color: #CDBE78;
+    font-size: 20px;
     
   }
 
@@ -335,7 +335,7 @@
    #userFirstName{
     grid-row: 2 / span 1;
     grid-column: 1 / span 1;
-    background-color: rgb(81, 81, 81);
+    background-color: rgb(109, 109, 109);
     color: rgb(48, 48, 48);
     border: 1px solid #2C3333;
     border-radius: 6px;
@@ -344,7 +344,7 @@
   #userLastName{
     grid-row: 2 / span 1;
     grid-column: 2 / span 1;
-    background-color: rgb(81, 81, 81);
+    background-color: rgb(109, 109, 109);
     color: rgb(48, 48, 48);
     border: 1px solid #2C3333;
     border-radius: 6px;
@@ -353,7 +353,7 @@
   #userEmail{
     grid-row: 3 / span 1;
     grid-column: 1 / span 1;
-    background-color: rgb(81, 81, 81);
+    background-color: rgb(109, 109, 109);
     color: rgb(48, 48, 48);
     border: 1px solid #2C3333;
     border-radius: 6px;
@@ -362,7 +362,7 @@
   #userPassword{
     grid-column: 2 / span 1;
     grid-row: 3 / span 1;
-    background-color: rgb(81, 81, 81);
+    background-color: rgb(109, 109, 109);
     color: rgb(48, 48, 48);
     border: 1px solid #2C3333;
     border-radius: 6px;
@@ -428,7 +428,7 @@
 
   #findImgName{
     color: #CDBE78;
-    margin-left: .7rem;
+    margin-left: 0.7rem;
   }
 
   #submitPost{
@@ -444,7 +444,7 @@
 
   #logoutButton{
     background-color: #066163;
-    color:#CDBE78;
+    color:#CDBE78; 
     font-size: 23px;
     border: 1px solid #066163;
   }
